<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:checked="true"
            app:itemTextColor="@color/colorPrimaryDark"
            app:itemIconTint="@color/colorPrimaryDark"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>
        <item
            android:checked="true"
            android:id="@+id/verification"
            app:itemTextColor="@color/colorPrimaryDark"
            app:itemIconTint="@color/colorPrimaryDark"
            android:icon="@drawable/ic_verified"
            android:title="@string/verification" />
        <item
            android:checked="true"
            android:id="@+id/cut_off"
            app:itemTextColor="@color/colorPrimaryDark"
            app:itemIconTint="@color/colorPrimaryDark"
            android:icon="@drawable/ic_sort_black_24dp"
            android:title="@string/cut_off" />
        <item
            android:checked="true"
            android:id="@+id/member_cut_off"
            app:itemTextColor="@color/colorPrimaryDark"
            app:itemIconTint="@color/colorPrimaryDark"
            android:icon="@drawable/ic_sort_black_24dp"
            android:title="@string/membre_cut_off"

            />
        <item
            android:checked="true"
            android:id="@+id/settings"
            app:itemTextColor="@color/colorPrimaryDark"
            app:itemIconTint="@color/colorPrimaryDark"
            android:icon="@drawable/ic_settings_applications_black_24dp"
            android:title="@string/settings" />
        <item
            android:checked="true"
            android:id="@+id/attendance"
            app:itemTextColor="@color/colorPrimaryDark"
            app:itemIconTint="@color/colorPrimaryDark"
            android:icon="@drawable/ic_attendance"
            android:title="@string/attendance" />
        <item
            android:id="@+id/savings"
            android:checked="true"
            app:itemTextColor="@color/colorPrimaryDark"
            app:itemIconTint="@color/colorPrimaryDark"
            android:icon="@drawable/ic_language"
            android:title="@string/savings" />
        <item
            android:checked="true"
            android:id="@+id/receipts"
            app:itemTextColor="@color/colorPrimaryDark"
            app:itemIconTint="@color/colorPrimaryDark"
            android:icon="@drawable/ic_receipt_black_24dp"
            android:title="@string/receipts" />
        <item
            android:checked="true"
            android:id="@+id/payment"
            app:itemTextColor="@color/colorPrimaryDark"
            app:itemIconTint="@color/colorPrimaryDark"
            android:icon="@drawable/ic_payment_black_24dp"
            android:title="@string/payment" />
        <item
            android:id="@+id/logout"
            android:checked="true"
            app:itemTextColor="@color/colorPrimaryDark"
            app:itemIconTint="@color/colorPrimaryDark"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>