<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.grandreicipt.GrandRecieptFragment">

    <LinearLayout
        android:id="@+id/grandsLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/addedgrandsRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_10" />


        <androidx.cardview.widget.CardView
            android:id="@+id/grandsCV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/grand_type_MBS"
                    style="@style/CustomSpinner"
                    android:hint="@string/reciept_type_MBS_hint" />

                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/grand_source_MBS"
                    style="@style/CustomSpinner"
                    android:hint="@string/grand_source" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_5"
                        android:padding="@dimen/dimen_5"
                        android:layout_marginBottom="@dimen/dimen_5"
                        android:layout_weight="1"
                        android:hint="@string/grand_id">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/grand_idTIET"
                            android:layout_margin="@dimen/dimen_5"
                            android:maxLines="1"
                            android:maxLength="30"
                            android:textColor="@color/colourSpinnerText"
                            android:textColorHint="@color/colourBtnBlueBackground"
                            android:imeOptions="actionNext"
                            android:textSize="@dimen/dimen_15" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_5"
                        android:padding="@dimen/dimen_5"
                        android:layout_marginBottom="@dimen/dimen_5"
                        android:layout_weight="1"
                        android:hint="@string/grand_agency_name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/grand_agency_nameTIET"
                            android:layout_margin="@dimen/dimen_5"
                            android:maxLines="1"
                            android:maxLength="30"
                            android:textColor="@color/colourSpinnerText"
                            android:textColorHint="@color/colourBtnBlueBackground"
                            android:imeOptions="actionNext"
                            android:textSize="@dimen/dimen_15" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/addgrandIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/dimen_10"
            android:layout_marginRight="@dimen/dimen_15"
            android:background="@color/colorWhite"
            android:src="@drawable/ic_add_24" />
    </LinearLayout>


</FrameLayout>